# qfyaml

./: .zenodo.json  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE.txt  README.md  SUPPORT.md  zenodo.json
.github/ISSUE_TEMPLATE/: ask-a-question.md  report-a-bug-or-technical-issue.md  request-a-new-feature.md  start-a-discussion.md
.github/PULL_REQUEST_TEMPLATE/: create-a-pull-request.md
cmake/: .gitignore  GNU.cmake  Intel.cmake
docs/: requirements.txt
docs/source/: .gitignore  about.rst  conf.py  contributing.rst  editing-these-docs.rst  index.rst  installation.rst  installation.rst.~1~  known-bugs.rst  requirements.rst  running-tests.rst
src/: CMakeLists.txt  geoschem_config.yml  input.yml  qfyaml_mod.F90  species_database.yml  species_database_apm.yml  species_database_test.yml  species_database_tomas.yml  test_geoschem_config.F90  test_qfyaml.F90  test_species_database.F90
test/: CMakeLists.txt  geoschem_config.yml  input_options.yml  qfyaml.yml  test_config.F90  test_geoschem_config.F90  test_input_options.F90  test_qfyaml.F90  test_species_database.F90
